# codex-register-cli

./: .env.example  .gitignore  README.md  Usage.md  config.json  ensure_target_accounts.bat  main.py  pyproject.toml  requirements.txt
src/: main.py
src/cli/: __init__.py  account_selection.py  bootstrap.py  common.py  config_ui.py  cpa.py  main.py  registration.py
src/cli/commands/: accounts.py  config.py  cpa.py  database.py  register.py  run.py  services.py
src/config/: __init__.py  constants.py  settings.py
src/core/: dynamic_proxy.py  register.py
src/core/upload/: cpa_upload.py
src/database/: crud.py  session.py
src/services/: tempmail.py
