[project]
name = "codex-console"
version = "1.1.0"
description = "CLI-first OpenAI account registration console"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.14.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
codex-console = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
